Added further updates to support async model

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies":{
     "aws-iot-device-sdk": "2.0.1",
-    "async":"2.5.0",
-    "minimist": "1.2.0"
+    "async":"2.5.0"
   },
   "keywords":[
     "node.js"
